style.css
/* ... */
#sidebar a, #sidebar a:visited, #comics-bar a, #comics-bar a:visited {
  color: #af4f4f;
}

/* Logo & Title */

#header {
  padding-bottom: 10px;
}

.reset-graph {
  cursor: pointer;
}

.logo {
  float: left;
  padding: 3px 0 0 4px;
  height: 47px;
}

h1 {
  font-size: 32px;
  background-color: var(--marvel-red);
  color: white;
  padding: 5px 0;
  margin: 0 0 9px 0;
}
.marvel {
  font-family: "Impact", "ImpactLoad", monospace;
  font-weight: normal;
  font-size: 36px;
  letter-spacing: -1px;
  transform: scaleY(1.2);
  display: inline-block;
  padding-right: 10px;
  vertical-align: top;
}

h2 {
  color: #AAA;
  font-size: 17px;
  margin: 0 6px;
}
#title {
  display: inline;
}
#node-label {
  display: none;
  margin-top: 3px;
}

/* Text info zone */

.sidebar-text {
  clear: both;
  display: none;
  margin: 0;
  padding: 0;
  overflow-y: auto;
  line-height: 16px;
}
#explanations {
  border-top: 1px dashed #444;
  border-bottom: 1px dashed #444;
  opacity: 0;
  -webkit-transition: opacity 0.75s ease-in-out;
  -moz-transition: opacity 0.75s ease-in-out;
  -o-transition: opacity 0.75s ease-in-out;
  transition: opacity 0.75s ease-in-out;
}
#explanations p {
  margin: 7px 25px;
}

#order {
  min-width: 20px;
  display: inline-block;
}
#clusters-legend b span {
  white-space: nowrap;
}

#node-details {
  text-align: center;
  max-height: 60%;
  padding-top: 1px;
  border-bottom: 1px dashed #444;
}
#node-img, #comic-img {
  max-width: 75%;
  max-height: 400px;
  cursor: pointer;
  display: inherit;
  margin: auto;
}
#node-extra {
  margin: 7px 25px;
}

/* View more buttons */

.button {
  display: inline-block;
  cursor: pointer;
  font-weight: bold;
  font-size: 16px;
  margin: 10px 0 10px 0!important;
  text-transform: uppercase;
  line-height: 20px;
}
.button > span {
  width: 170px;
  background-color: var(--marvel-red);
  color: #DDD!important;
  border: 1px solid #444;
  border-radius: 3px;
  padding: 5px;
}

.button.selected, #choices.selected {
  opacity: 0.35;
  cursor: progress;
  -webkit-transition: 0.35s ease-in-out;
  -moz-transition: 0.35s ease-in-out;
  -o-transition: 0.35s ease-in-out;
  transition: 0.35s ease-in-out;
}
.button.selected.left, .button.selected.right {
  opacity: 1;
}

/* Switch buttons */

h5 {
  font-size: 15px;
  margin: 0;
  margin-bottom: 8px;
}

#choices {
  position: absolute;
  bottom: 36px;
  width: 300px;
  height: 64px;
  padding: 8px 0 0 0;
  margin: 0;
}
.network-choice {
  display: flex;
  justify-content: center;
  position:relative;
  width: 100%;
  margin-bottom: 10px;
  height: 28px;
}
#choices .network-choice:last-child {
  margin-bottom: 0;
}
#choices .network-choice:first-child {
  margin-top: 0;
}

.network-switch-label, .toggle {
  height: 100%;
  border-radius: 3px;
}
.network-switch-label {
  display: block;
  width: 236px;
  background-color: #000;
  border-radius: 3px;
  position: relative;
  cursor: pointer;
}
.toggle {
  position: absolute;
  width: 116px;
  background-color: var(--marvel-red);
  transition: .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
  margin: -2px 0 0 0px;
  border: 1px solid #444;
  height: 30px
}

.names {
  font-size: 90%;
  font-weight: bolder;
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  justify-content: space-around;
  align-items: center;
  align-content: center;
  user-select: none;
}
.names > div {
  font-size: 16px;
  font-weight: bold;
  text-transform: uppercase;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.left, .right{
  width: 50%;
  text-align: center;
}
.left {
  color: white;
}
.right {
  color: var(--marvel-red);
}

[type="checkbox"] {
  display: none;
}
[type="checkbox"]:disabled + .network-switch-label {
  cursor: progress;
}
[type="checkbox"]:checked + .network-switch-label .toggle {
  transform: translateX(100%);
}
[type="checkbox"]:checked + .network-switch-label .left {
  color: var(--marvel-red);
}
[type="checkbox"]:checked + .network-switch-label .right {
  color: white;
}

/* Credits & Help Footer */

#credits {
  position: absolute;
  bottom: 0px;
  width: 300px;
  line-height: 13px;
  border-top: 1px dashed #444;
  background-color: #222;
  z-index: 2;
}
#credits p {
  font-size: 12px;
  padding: 3px 0px 0 34px;
  margin: 0;
}
#credits p:last-child {
  padding-bottom: 3px;
}

#help {
  position: absolute;
  left: 0;
  margin: 4px;
  width: 28px;
  height: 28px;
  background-color: var(--marvel-red)!important;
  color: white;
  font-family: Arial;
  font-size: 20px;
  font-weight: bold;
  text-indent: 0px;
  text-align: center;
  cursor: pointer;
  box-sizing: border-box;
  display: flex;
  align-content: center;
  justify-content: center;
  align-items: center;
  border: 1px solid #444;
  border-radius: 20px;
}


/* -------- Comics Histogram ------------*/

#histogram-container {
  position: absolute;
  left: 302px;
  bottom: 0;
  width: calc(100% - 598px);
  margin-left: -2px;
  height: 75px;
  float: left;
  background-color: #2B2B2B;
  color: #AAA;
  text-align: center;
  box-shadow: 0px -2px 5px #000;
}

#histogram-title {
  font-size: 14px;
  font-weight: bold;
  padding-top: 2px;
}

#histogram, #histogram-hover {
  display: flex;
  align-items: flex-end;
  margin: 0 12px;
  height: 32px;
  opacity: 0;
  -webkit-transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  -o-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
}
#histogram {
  margin-top: 3px;
  border-bottom: 1px solid var(--marvel-red);
}
.histobar {
  display: block;
  background-color: var(--marvel-red);
  box-shadow: 0px 0px 2px var(--marvel-red);
  border-radius: 1px 1px 0 0;
}

#histogram-hover {
  margin-top: -31px;
  cursor: cell;
}
.histobar-hover {
  height: 36px;
  background-color: #555;
  opacity: 0;
}

#histogram-legend {
  font-size: 12px;
  font-weight: bold;
  color: #AAA;
  padding: 3px 4px 0 4px;
  text-align: left;
}
/* ... */

